--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -9,13 +9,22 @@
     android:padding="10dp">
 
     <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/name_i_version"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Имя проги и версия"
-        android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:text="версия"
+        android:textColor="@android:color/black" />
 
     <TextView
         android:layout_width="match_parent"
