--- a/app/src/main/res/layout/item_kategoriy.xml
+++ b/app/src/main/res/layout/item_kategoriy.xml
@@ -5,13 +5,50 @@
     android:background="@color/colorFonDefoult"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/but_item_kategor"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorFonDefoult"
-        android:padding="7dp"
-        android:text="Button"
-        android:textColor="@color/colorText_tovarDefoult"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/but_open_kategorii_list"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@color/colorFonDefoult"
+            android:padding="7dp"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/but_item_kategor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorFonDefoult"
+            android:gravity="left|center"
+            android:padding="7dp"
+            android:text="Button"
+            android:textColor="@color/colorText_tovarDefoult"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/list_kategori_open_loaut"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/but_item_kategor2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:background="@color/colorFonDefoult"
+            android:gravity="left|center"
+            android:padding="7dp"
+            android:text="Button"
+            android:textColor="@color/colorText_tovarDefoult"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </LinearLayout>
