--- a/app/src/main/res/layout/item_tovar.xml
+++ b/app/src/main/res/layout/item_tovar.xml
@@ -49,9 +49,9 @@
                     android:layout_marginRight="3dp"
                     android:layout_marginTop="5dp"
                     android:maxHeight="200dp"
-                    android:maxWidth="140dp"
+                    android:maxWidth="250dp"
                     android:minHeight="200dp"
-                    android:minWidth="140dp"
+                    android:minWidth="250dp"
                     android:scaleType="fitXY"
                     android:src="@mipmap/ic_launcher" />
 
@@ -68,44 +68,35 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="100dp"
+                        android:gravity="right|center"
+                        android:paddingRight="10dp"
                         android:text="Бонусы"
-                        android:textColor="@color/colorText_tovarDefoult"
+                        android:textColor="@color/colorText_Bonus"
                         android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/textView_nalichie"
                         android:layout_width="match_parent"
                         android:layout_height="33dp"
+                        android:gravity="right|center"
+                        android:paddingRight="10dp"
                         android:text="Наличие"
-                        android:textColor="@color/colorText_tovarDefoult"
+                        android:textColor="@color/cardview_dark_background"
                         android:textSize="12sp" />
 
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/textView_mani"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="bottom"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Цена:"
-                            android:textColor="@color/colorText_tovarDefoult" />
-
-                        <TextView
-                            android:id="@+id/textView_mani"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Цена"
-                            android:textColor="@color/colorText_tovarDefoult"
-                            android:textSize="12sp"
-                            android:textStyle="bold"
-                            tools:layout_editor_absoluteX="163dp"
-                            tools:layout_editor_absoluteY="286dp" />
-                    </LinearLayout>
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="right|center"
+                        android:paddingRight="10dp"
+                        android:text="Цена"
+                        android:textColor="@color/colorText_Cena"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        tools:layout_editor_absoluteX="163dp"
+                        tools:layout_editor_absoluteY="286dp" />
 
                 </LinearLayout>
 
