--- a/app/src/main/res/layout/podrobno_o_tovare.xml
+++ b/app/src/main/res/layout/podrobno_o_tovare.xml
@@ -8,9 +8,19 @@
     android:orientation="vertical"
     tools:context=".Podrobno_o_tovare">
 
-    <ScrollView
+    <ProgressBar
+        android:id="@+id/progressBar_podrobno_load_data"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        tools:visibility="visible" />
+
+    <ScrollView
+        android:id="@+id/scroll_kontent_podrobno"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Название товара"
+                android:textColor="@color/colorText_tovarDefoult"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -33,35 +44,43 @@
                 android:src="@mipmap/ic_launcher" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageView_ava1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/imageView_ava2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/imageView_ava3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher" />
 
                 <ImageView
                     android:id="@+id/imageView_ava4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:src="@mipmap/ic_launcher" />
+
+                <ImageView
+                    android:id="@+id/imageView_ava5"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
                     android:src="@mipmap/ic_launcher" />
             </LinearLayout>
@@ -70,29 +89,40 @@
                 android:id="@+id/textView_artikul_tovara_podrobno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="left|center"
                 android:text="Артикул" />
+
+            <TextView
+                android:id="@+id/textView_cena_tovara_podrobno"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left|center"
+                android:text="Цена"
+                android:textColor="@color/colorText_Cena" />
 
             <TextView
                 android:id="@+id/textView_bonus_tovara_podrobno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Бонусы" />
+                android:gravity="left|center"
+                android:text="Бонусы"
+                android:textColor="@color/colorText_Bonus" />
 
             <TextView
                 android:id="@+id/textView_nalichie_tovara_podrobno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Наличие товара" />
+                android:gravity="left|center"
+                android:text="Наличие товара"
+                android:textColor="@color/cardview_dark_background" />
 
             <TextView
                 android:id="@+id/textView_opisanie_tovara_podrobno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Описание товара" />
+                android:gravity="left|center"
+                android:text="Описание товара"
+                android:textColor="@color/colorText_tovarDefoult" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
