--- a/app/src/main/res/layout/list_tovarov.xml
+++ b/app/src/main/res/layout/list_tovarov.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorFonDefoult"
     android:orientation="vertical"
     tools:context=".List_tovarov">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_title_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="Категория и количество товаров"
+            android:textColor="@color/colorText_tovarDefoult"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progress_load_tovari_spisok"
@@ -13,9 +30,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_tovary_spisok"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/conteiner_swipe_list_tovarov"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:layout_height="match_parent">
+        <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
+            android:id="@+id/list_tovary_spisok"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:fastScrollThumbColor="@color/colorscroll"
+            app:fastScrollAutoHide="false"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
