--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
       <color name="colorText_tovarDefoult">#2d081a</color>
       <color name="colorText_Cena">#740101</color>
       <color name="colorText_Bonus">#9bb605</color>
+      <color name="colorscroll">#400b2b</color>
 </resources>
