--- a/app/src/main/res/layout/item_tovar.xml
+++ b/app/src/main/res/layout/item_tovar.xml
@@ -20,7 +20,7 @@
         app:cardBackgroundColor="@color/colorFon_tovaraDefoult"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
-        app:cardPreventCornerOverlap="false">
+        app:cardPreventCornerOverlap="false" tools:targetApi="lollipop">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -48,11 +48,11 @@
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="3dp"
                     android:layout_marginTop="5dp"
+                    android:cropToPadding="false"
                     android:maxHeight="200dp"
                     android:maxWidth="250dp"
                     android:minHeight="200dp"
                     android:minWidth="250dp"
-                    android:scaleType="fitXY"
                     android:src="@mipmap/ic_launcher" />
 
                 <LinearLayout
