--- a/app/src/main/res/layout/list_tovarov.xml
+++ b/app/src/main/res/layout/list_tovarov.xml
@@ -8,15 +8,30 @@
     android:orientation="vertical"
     tools:context=".List_tovarov">
 
-    <Button
-        android:id="@+id/button_title_list"
+    <TextView
+        android:id="@+id/data_update_data"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="1"
+        android:layout_height="8dp"
+        android:gravity="right"
+        android:paddingRight="5dp"
+        android:textColor="@color/colorText_tovarDefoult"
+        android:textSize="6sp" />
+
+    <Button
+        android:id="@+id/title_categoriy"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:background="@android:color/transparent"
         android:text="Категория и количество товаров"
-        android:textColor="@color/colorText_tovarDefoult"
         android:textStyle="bold" />
+
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/conteiner_swipe_list_tovarov"
@@ -29,7 +44,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:fastScrollAutoHide="false"
-            app:fastScrollThumbColor="@color/colorscroll" />
+            app:fastScrollThumbColor="@color/colorscroll">
+
+        </com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
