--- a/app/src/main/res/layout/tovar_nedeli.xml
+++ b/app/src/main/res/layout/tovar_nedeli.xml
@@ -6,6 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/data_update_data_nedeli"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:gravity="right"
+        android:paddingRight="5dp"
+        android:textColor="@color/colorText_tovarDefoult"
+        android:textSize="6sp" />
+
     <ProgressBar
         android:id="@+id/progress_load_tovar_nedeli"
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
