--- a/app/src/main/res/layout/podrobno_o_tovare.xml
+++ b/app/src/main/res/layout/podrobno_o_tovare.xml
@@ -8,6 +8,16 @@
     android:orientation="vertical"
     tools:context=".Podrobno_o_tovare">
 
+    <TextView
+        android:id="@+id/name_tovara_podrobno"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="Название товара"
+        android:textColor="@color/colorText_tovarDefoult"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
     <ProgressBar
         android:id="@+id/progressBar_podrobno_load_data"
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
@@ -26,16 +36,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView_name_tovara_podrobno"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Название товара"
-                android:textColor="@color/colorText_tovarDefoult"
-                android:textSize="18sp"
-                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/imageView_ava_tovara_podrobno"
