--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -42,6 +42,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/roznichniy_otdel" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -65,6 +66,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/korporotivniy_otdel" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -88,6 +90,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/internet_magazin" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -111,6 +114,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/tenderniy_otdel" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -134,6 +138,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/otdel_zakupok" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -157,6 +162,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/otdel_marketinga" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -179,6 +185,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/servis_centr" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
@@ -201,6 +208,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/colorText_tovarDefoult"
                     android:text="@string/otdel_avtomatizacii" />
 
             </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
